--- a/server/package.json
+++ b/server/package.json
@@ -11,6 +11,8 @@
   "description": "",
   "dependencies": {
     "express": "^4.20.0",
+    "jsonwebtoken": "^9.0.2",
+    "nodemon": "^3.1.4",
     "pg": "^8.12.0",
     "sequelize": "^6.37.3",
     "sequelize-cli": "^6.6.2"
