--- a/server/package.json
+++ b/server/package.json
@@ -10,6 +10,7 @@
   "keywords": [],
   "description": "",
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.20.0",
     "jsonwebtoken": "^9.0.2",
     "nodemon": "^3.1.4",
