--- a/client/cms/package.json
+++ b/client/cms/package.json
@@ -17,6 +17,7 @@
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.26.2",
     "redux": "^5.0.1",
+    "socket.io": "^4.7.5",
     "toastify-js": "^1.12.0"
   },
   "devDependencies": {
