--- a/client/cms/package.json
+++ b/client/cms/package.json
@@ -18,6 +18,7 @@
     "react-router-dom": "^6.26.2",
     "redux": "^5.0.1",
     "socket.io": "^4.7.5",
+    "socket.io-client": "^4.7.5",
     "toastify-js": "^1.12.0"
   },
   "devDependencies": {
