--- a/server/package.json
+++ b/server/package.json
@@ -16,6 +16,7 @@
     "nodemon": "^3.1.4",
     "pg": "^8.12.0",
     "sequelize": "^6.37.3",
-    "sequelize-cli": "^6.6.2"
+    "sequelize-cli": "^6.6.2",
+    "socket.io": "^4.7.5"
   }
 }
