--- a/client/cms/package.json
+++ b/client/cms/package.json
@@ -19,6 +19,7 @@
     "redux": "^5.0.1",
     "socket.io": "^4.7.5",
     "socket.io-client": "^4.7.5",
+    "sweetalert2": "^11.14.0",
     "toastify-js": "^1.12.0"
   },
   "devDependencies": {
